# simple-project-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
config/general/: general.yaml
docs/: business.md  index.md
docs/technical/: overview.md
src/: config.py  constants.py  run.py  utils.py
src/nodes/: __init__.py
tests/: conftest.py  helpers.py
tests/e2e/: conftest.py
tests/unit/: test_dummy.py
