[project]
name = "custom-template-maxime"
version = "0.1.0"
description = "Production-grade data pipeline template for simple projects."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    # dataconf-manager[data] already installs polars, fastexcel, and xlsxwriter.
    # If you remove this dependency, add them back explicitly:
    #   "polars>=1.0.0",
    #   "fastexcel>=0.10.0",
    #   "xlsxwriter>=3.2.0",
    "dataconf-manager[data] @ git+https://github.com/MaximeRighini/dataconf-manager.git",
    # pipeline-orchestrator can be removed for projects that do not need
    # formal pipeline execution tracing (nodes/, pipelines/ dirs can be deleted too).
    "pipeline-orchestrator @ git+https://github.com/MaximeRighini/pipeline-orchestrator.git",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.0.0",
    "types-PyYAML",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.0.0",
    "mkdocs-material>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",  # Style errors and warnings (Pycodestyle)
    "F",        # Logic and import errors (Pyflakes)
    "I",        # Import sorting (isort)
    "C90",      # Cyclomatic complexity (McCabe)
    "N",        # Naming convention compliance (pep8-naming)
    "UP",       # Pyupgrade (alerts for obsolete Python syntax)
    "B",        # Potential bug detection (flake8-bugbear)
    "A",        # Builtins shadowing prevention (flake8-builtins)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
